--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         <div class="container px-4">
             <div class="row text-bg-secondary py-1 fs-">
                 <div class="col-3">
-                    <h6>Index</h6>
-                </div>
-                <div class="col-3 h6-0">
                     <h6>Name</h6>
                 </div>
-                <div class="col-3">
+                <div class="col-3 h6-0">
                     <h6>Visit</h6>
                 </div>
                 <div class="col-3">
                     <h6>Delete</h6>
+                </div>
+                <div class="col-3">
+                    <h6>Update</h6>
                 </div>
 
             </div>
